objects/ASI_TH_CRM_Plan_Offtake_Sub_brand_Total__c.object
<CustomObject>
    <fields>
        <fullName>ASI_TH_CRM_Average_Quantity__c</fullName>
        <formula>ASI_TH_CRM_Total_Quantity__c /  ASI_TH_CRM_Contract__r.ASI_TH_CRM_No_Of_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Plan Offtake - Sub-brand Total</relationshipLabel>
        <relationshipName>ASI_TH_CRM_POSBT_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_POTSubbrandTotal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Plan Offtake Sub-brand Total External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_TH_CRM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Plan Offtake - Sub-brand Total</relationshipLabel>
        <relationshipName>ASI_TH_CRM_POSBT_Subbrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Plan Offtake - Sub-brand Total</label>
    <nameField>
        <displayFormat>{YY}{MM}-{0000}</displayFormat>
        <label>Plan Offtake - Sub-brand Total Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Offtake - Sub-brand Total</pluralLabel>
    <recordTypes>
        <fullName>ASI_TH_CRM_Plan_Offtake_Total</fullName>
        <active>true</active>
        <label>ASI TH CRM Plan Offtake - Total</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASI_TH_CRM_PlanOfftakeUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Draft&apos;, TEXT(ASI_TH_CRM_Contract__r.ASI_TH_CRM_Contract_Status__c) &lt;&gt; &apos;Editing&apos;,
NOT( CONTAINS( $Profile.Name, &apos;System Admin&apos;))
)</errorConditionFormula>
        <errorMessage>Plan Offtake can only be edited when Contract Status is Draft or Editing</errorMessage>
    </validationRules>
</CustomObject>